keycodes/styles.css
* {
  box-sizing: border-box;
}

body {
  font-family: monospace;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  margin: 0;
  background-color: rgb(228, 226, 226);
}

#hint {
  border: 1px solid #000;
  font-size: 1.5em;
  padding: 20px;
  font-weight: bold;
  background-color: #f1efef;
}

.container {
  display: flex;
  gap: 20px;
}

p {
  text-align: center;
}

.box {
  width: 100px;
  height: 50px;
  border: 1px solid #000;
  text-align: center;
  line-height: 50px;
  background-color: #fff;
  font-size: 1.5rem;
}

